app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2
  labels:
    app: version2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      name: nginx-app2
      labels:
        app: app
        version: version2
    spec:
      containers:
        - name: app2
          image: harshal0812/nginx-app2
