service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appservice
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app
