destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: appservice
spec:
  host: appservice
  trafficPolicy:
    tls:
      mode: DISABLE

  subsets:
  - name: v1
    labels:
      version: version1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN


  - name: v2
    labels:
      version: version2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
