virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - match:
        - uri: 
            exact: /v1/sayHello
      route:
      - destination:
          host: version1
          subset: v1
        weight: 80
      - destination:
          host: version1
          subset: v2
        weight: 20
